Various cleanup and better display.